# 20260529

./: .gitignore  AIRCRAFT_COMPATIBILITY_MATRIX.md  BOEING_HGS_COMPARISON.md  CMakeLists.txt  CRITICAL_DEFECTS.md  C_HUD_Install.py  C_HUD_Install.spec  C_HUD_RUNWAY_PRODUCTION_SUMMARY.md  LICENSE  PRODUCTION_READINESS.md  README.md  REALISM_GAP_REPORT.md  REPOSITORY_PUBLISH_CHECKLIST.md  build_wasm.bat  build_wasm.sh  layout.json  panel.cfg
.github/workflows/: build.yml
audit/: AIRCRAFT_CONSISTENCY_REPORT.md  AIRCRAFT_HUD_MATRIX.md  AIRCRAFT_INTEGRATION_MATRIX.md  AUDIT_VERIFICATION.md  BUILD_VERIFICATION.md  CAMERA_TRACKING_VERIFICATION.md  CERTIFICATION_AUDIT.md  CERTIFICATION_REMEDIATION.md  CLEANUP_INVENTORY.md  CLIPPING_ORDER_VERIFICATION.md  COLLIMATION_PHYSICS_VERIFICATION.md  COLLIMATION_VERIFICATION.md  COMBINER_GEOMETRY_AUDIT.md  COMPATIBILITY_MATRIX.md  DEAD_CODE_REPORT.md  DEPLOYMENT_FIX_VERIFICATION.md  GITIGNORE_AUDIT.md  HISTOGRAM_VALIDATION.md  HUD_DEPLOYMENT_DETECTION.md  HUD_INTEGRATION_ARCHITECTURE.md  OPTICAL_STABILITY_VALIDATION.md  PACING_VALIDATION.md  PERCENTILE_IMPLEMENTATION.md  PHASE2_VERIFICATION.md  PHASE3_VERIFICATION.md  PHASE5_REMEDIATION_PLAN.md  PMDG777_VIRTUAL_HUD_FEASIBILITY.md  PRIORITY_REMEDIATION_PLAN.md  README_AUDIT.md  README_CORRECTIONS.md  REALISM_GAP_REPORT.md  REAL_HUD_COMPLIANCE_AUDIT.md  RENDERING_PATH_VERIFICATION.md  RUNTIME_TIMING_AUDIT.md  VERSION_ALIGNMENT_REPORT.md  VERSION_AUDIT.md  VIEWPORT_VERIFICATION.md
docs/: index.html
include/: module.h  projection.h
include/hud/: advanced_symbology.h  aircraft_detector.h  aircraft_profiles.h  airport_database.h  collimation.h  combiner_geometry.h  confidence.h  declutter.h  depth_illusion.h  evs.h  flare.h  fpv.h  guidance.h  hud_deployment.h  rollout.h  runway_cache.h  runway_projection.h  stabilization.h  symbology.h  telemetry.h  verification.h  visual_response.h
include/hud/aircraft/: a350_autoland.h  a350_cat3.h  a350_flare_law.h  a350_fpv_controller.h  a350_horizon.h  a350_landing_energy.h  a350_profile.h  a350_rollout.h  a350_runway_augmentation.h  a350_symbology.h  airbus_fpv.h  airbus_hud_behavior.h  boeing_hgs_behavior.h  ihud_aircraft_behavior.h
installer/: __init__.py  aircraft_scanner.py  certification.py  diagnostics.py  healer.py  installer.py  msfs_detector.py  oneclick.py  patch_engine.py  repair_wizard.py  safety.py  signature_verifier.py  updater.py
installer/gui/: __init__.py  app.py
panel/HUD/: conformal_renderer.js  hud_overlay.html  hud_overlay.js
src/: lvar_table.cpp  main.cpp  module.cpp
src/hud/: advanced_symbology.cpp  aircraft_detector.cpp  aircraft_profiles.cpp  airport_database.cpp  calibration.cpp  collimation.cpp  combiner_geometry.cpp  confidence.cpp  declutter.cpp  depth_illusion.cpp  evs.cpp  flare.cpp  fpv.cpp  guidance.cpp  hud_deployment.cpp  rollout.cpp  runway_cache.cpp  runway_projection.cpp  stabilization.cpp  symbology.cpp  telemetry.cpp  visual_response.cpp
src/hud/aircraft/: a350_autoland.cpp  a350_cat3.cpp  a350_flare_law.cpp  a350_fpv_controller.cpp  a350_horizon.cpp  a350_landing_energy.cpp  a350_profile.cpp  a350_rollout.cpp  a350_runway_augmentation.cpp  a350_symbology.cpp  airbus_fpv.cpp  airbus_hud_behavior.cpp  boeing_hgs_behavior.cpp
tests/: test_a350_hud.py  test_advanced_symbology.py  test_aircraft_compatibility.py  test_airport_database.py  test_cat3_annunciation.py  test_certification.py  test_certification_metrics.py  test_collimation.py  test_confidence.py  test_declutter.py  test_depth_illusion.py  test_diagnostics.py  test_end_to_end_pipeline.py  test_evs.py  test_evs_rendering.py  test_flare.py  test_flight_scenarios.py  test_frame_pacing.py  test_hud.py  test_human_factors.py  test_installer_aircraft_scanner.py  test_installer_healer.py  test_installer_msfs_detection.py  test_installer_patch_engine.py  test_installer_safety.py  test_installer_stress.py  test_js_lvar_consumption.py  test_long_duration_stability.py  test_module.py  test_operational_certification.py  test_optical_validation.py  test_performance.py  test_projection.py  test_repair_wizard.py  test_rollout.py  test_rollout_rendering.py  test_runtime_instrumentation.py  test_signature_verifier.py  test_stabilization.py  test_telemetry.py  (+4 more)
